✨ Complete SYN Platform Integration: REST API + Vue.js + P5.js Sacred Geometry
🎯 Major Features Added:
- 🔗 Backend REST API (Spring Boot 3.3.2 + H2 Database)
- 📱 Frontend API Integration (Vue.js + Sacred Geometry)
- 🔯 Live P5.js Visualizations with Backend Data
- 🚀 One-Command Platform Startup (./start-syn.sh)

🛠️ Technical Implementation:
- SacredConsciousnessController with consciousness endpoints
- P5.js Sacred Geometry with Flower of Life, Golden Spirals, Merkaba
- Real-time backend data integration for sacred patterns
- Complete VS Code task automation system
- Cross-Origin Resource Sharing (CORS) configured

🌟 Platform URLs:
- Frontend: http://localhost:3000
- Backend API: http://localhost:8081
- Sacred Geometry: /sacred-geometry
- API Health: /api/v1/consciousness/health

✨ Ready for Authentication System Integration